2010-09-07  Satish Sampath  <satish@chromium.org>

        Reviewed by Jeremy Orlow.

        Ignore programmatic clicks on speech input button for security reasons.
        https://bugs.webkit.org/show_bug.cgi?id=45181

        * fast/speech/speech-button-ignore-generated-events-expected.txt: Added.
        * fast/speech/speech-button-ignore-generated-events.html: Added.

2010-09-07  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: upstream two debugger tests
        https://bugs.webkit.org/show_bug.cgi?id=45262

        * inspector/debugger-pause-on-breakpoint-expected.txt: Added.
        * inspector/debugger-pause-on-breakpoint.html: Added.
        * inspector/debugger-pause-on-exception-expected.txt: Added.
        * inspector/debugger-pause-on-exception.html: Added.
        * platform/chromium/inspector/debugger-pause-on-exception-expected.txt: Added.

2010-09-07  Steve Block  <steveblock@google.com>

        Reviewed by Jeremy Orlow.

        Provide DeviceOrientation LayoutTests
        https://bugs.webkit.org/show_bug.cgi?id=39590

        Adds several new DeviceOrientation tests. Also fixes some style in existing tests.

        * fast/dom/DeviceOrientation/add-listener-from-callback.html: Added.
        * fast/dom/DeviceOrientation/script-tests/add-listener-from-callback.js: Added.
        * fast/dom/DeviceOrientation/add-listener-from-callback-expected.txt: Added.
        * fast/dom/DeviceOrientation/multiple-frames.html: Added.
        * fast/dom/DeviceOrientation/script-tests/multiple-frames.js: Added.
        * fast/dom/DeviceOrientation/multiple-frames-expected.txt: Added.
        * fast/dom/DeviceOrientation/no-synchronous-events.html: Added.
        * fast/dom/DeviceOrientation/script-tests/no-synchronous-events.js: Added.
        * fast/dom/DeviceOrientation/no-synchronous-events-expected.txt: Added.
        * fast/dom/DeviceOrientation/null-values.html: Added.