@@ -1,5 +1,15 @@
 2010-09-07  Satish Sampath  <satish@chromium.org>
 
+        Reviewed by Steve Block.
+
+        Fix speech button's hit test logic for RTL rendering.
+        https://bugs.webkit.org/show_bug.cgi?id=45288
+
+        * rendering/RenderTextControlSingleLine.cpp:
+        (WebCore::RenderTextControlSingleLine::forwardEvent):
+
+2010-09-07  Satish Sampath  <satish@chromium.org>
+
         Reviewed by Jeremy Orlow.
 
         Ignore programmatic clicks on speech input button for security reasons.
